Day01/ServiceCI.yml
apiVersion: v1
kind: Service
metadata:
  name: postgressvcci
spec:
  selector:
    app: nginx
    version: v1
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
