Day01/ServiceNP.yml
apiVersion: v1
kind: Service
metadata:
  name: postgressvcnp
spec:
  selector:
    app: nginx
    version: v1
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30001
