Day01/ServiceIN.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: postgressvcin
spec:
  rules:
    - hostname: postgres.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: postgressvcci
              servicePort: 5432
