Day01/NetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-net
  namespace: test
spec:
  podSelector:
    matchlabels:
      app: nginx
  policyTypes:
    - Ingress
    - Egress
ingress:
  - from:
      - ipBlock:
          cidr: 172.0.0.0/16
          except:
           - 172.1.10.0/24
      - namespaceSelector:
          matchLabels:
            project: test1

      - podSelector:
          matchLabels:
            role: db
    ports:
      - port: 80
        protocol: TCP
    
egress:
  - to:
      - ipBlock:
          cidr: 10.0.1.0/24
    ports:
      - port: 443
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metdata:
  name: default-allow
spec:
  podSelector: {}
  ingress:
   - {}
